# jetops-api-mvp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  overview.txt  pyproject.toml  requirements.txt
app/: main.py
app/api/: api_logging.py  dependencies.py  integration_dependencies.py  rate_limit.py
app/core/: config.py  errors.py  supabase.py
app/repositories/: analysed_notam_repository.py  analysis_context_repository.py  api_key_repository.py  api_log_repository.py  flight_repository.py  job_repository.py  notam_repository.py
app/schemas/: analysis_context.py  flight.py  integration_analysis.py  integration_auth.py  integration_test.py  job.py  notam.py  notam_analysis.py  notam_identifier_codes.json  notam_title_signals.json  notam_topic.py  notam_type_signals.json  pipeline_stage.py  signup.py
app/services/: analysis_context.py  analysis_service.py  analysis_task.py  extraction_task.py  flight_format.py  flight_parser.py  flight_utils.py  foreflight_notam_parser.py  foreflight_parser.py  job_service.py  naips_notam_parser.py  naips_parser.py  notam_analyzer.py  notam_categorize_agent.py  notam_parser.py  notam_topic_classifier.py  notam_topic_prompts.py  notam_utils.py  pdf_extractor.py  storage_path.py
documentation/endpoints/: v1-integration-analysis-submit.md  v1-integration-test.md  v1-jobs-begin-analysis.md  v1-jobs-create.md
documentation/services/: analysis-context.md  flight-extraction.md  notam-analysis.md  notam-extraction.md  notam-heuristic-classification.md  notam-topic-classification.md
tests/: conftest.py  paths.py
(+93 files in other folders)
